--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,7 +124,7 @@ jobs:
         with:
           component: true
           browser: chrome
-          command-prefix: 'NODE_OPTIONS=--openssl-legacy-provider &&' # https://github.com/cypress-io/cypress/issues/22262
+          command: 'NODE_OPTIONS=--openssl-legacy-provider && yarn cy:run-ct'  # https://github.com/cypress-io/cypress/issues/22262
           # if you want to enable parallelization
           # record: true
           # parallel: true
