workaround to Error: error:0308010C:digital envelope routines::unsupported

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,3 +131,5 @@ jobs:
           # parallel: true
           # group: ct-tests
           # tag: ct-tests
+        env:
+          NODE_OPTIONS: --openssl-legacy-provider # prevents running into Error: error:0308010C:digital envelope routines::unsupported https://github.com/muratkeremozcan/cypress-react-component-test-examples/actions/runs/10599910943/job/29376141508?pr=816#step:5:88
