--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,10 +103,10 @@ jobs:
 
   cypress-ct-test:
     # if you want to enable parallelization
-    # strategy:
-    #   fail-fast: false
-    #   matrix:
-    #     containers: [1, 2, 3, 4, 5, 6]
+    strategy:
+      fail-fast: false
+      matrix:
+        containers: [1, 2, 3, 4, 5, 6]
     needs: [install-dependencies]
     runs-on: ubuntu-latest
     steps:
@@ -129,7 +129,7 @@ jobs:
           component: true
           browser: chrome
           # if you want to enable parallelization
-          # record: true
-          # parallel: true
-          # group: ct-tests
-          # tag: ct-tests
+          record: true
+          parallel: true
+          group: ct-tests
+          tag: ct-tests
