--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "typecheck": "tsc --noEmit",
     "cy:open": "cypress open --e2e --browser chrome",
     "cy:run": "cypress run --e2e --browser chrome",
-    "cy:open-ct": "cypress open --component --browser chrome",
-    "cy:run-ct": "cypress run --component --browser chrome",
+    "cy:open-ct": "export NODE_OPTIONS=--openssl-legacy-provider && cypress open --component --browser chrome",
+    "cy:run-ct": "export NODE_OPTIONS=--openssl-legacy-provider && cypress run --component --browser chrome",
     "cy:run-ct-fast": "yarn cy:run-ct --config video=false screenshot=false useExperimentalComponentTesting=true",
     "server:test": "server-test 3000 cy:run"
   },
@@ -89,7 +89,7 @@
     "copy-to-clipboard": "3.3.3",
     "cross-env": "7.0.3",
     "cy-spok": "1.6.2",
-    "cypress": "13.10.0",
+    "cypress": "13.14.1",
     "cypress-axe": "1.4.0",
     "cypress-each": "1.13.3",
     "cypress-map": "^1.19.1",
